deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: house-notes-be-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: house-notes-be
  template:
    metadata:
      labels:
        app: house-notes-be
    spec:
      containers:
      - name: house-notes-be-container
        image: localhost:32000/house-notes-be:latest
        ports:
        - containerPort: 8002
