service.yml
apiVersion: v1
kind: Service
metadata:
  name: house-notes-be
  labels:
    service: notes
spec:
  selector:
    app: house-notes-be
  ports:
    - name: http
      port: 8000
      targetPort: 8000
  type: ClusterIP
