ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: house-notes-be
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: house.jx567.net
      http:
        paths:
          - path: /
            pathType: Exact
            backend:
              service:
                name: house-notes-be
                port:
                  name: http
